--- a/src/styles.css
+++ b/src/styles.css
@@ -6,4 +6,227 @@ html {
 *::before,
 *::after {
   box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+.wrapper {
+  width: 1128px;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'Quicksand', sans-serif;
+}
+
+.search-form {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.search-form .input {
+  display: block;
+  /* width: 100%; */
+
+  height: 47px;
+  padding: 0 24px;
+  color: #808080;
+  font-size: 13px;
+  border-color: #f7f7f7;
+  border-style: solid;
+  border-radius: 23.5px;
+
+  background: #f7f7f7;
+  margin-bottom: 25px;
+  transition: border-color 400ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.search-form .input:focus {
+  border-color: #808080;
+  outline: none;
+}
+
+.search-form .input:hover {
+  border-color: #808080;
+  outline: none;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding-left: 0;
+  padding-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.gallery-img {
+  padding-left: 0;
+  padding-right: 0;
+  margin-left: 0;
+  margin-right: 0;
+  display: block;
+}
+
+.gallery-img {
+  width: 260px;
+}
+
+.gallery-card {
+  width: calc((50px * 4) + (20px * 3));
+}
+
+.gallery-card:not(:nth-last-child(-n + 4)) {
+  margin-bottom: 20px;
+}
+
+.gallery-card:not(:nth-child(4n)) {
+  margin-right: 25px;
+}
+
+.photo-card {
+  position: relative;
+}
+
+.stats {
+  background-color: rgba(96, 97, 99, 80%);
+
+  font-weight: 300;
+  font-size: 15px;
+
+  position: absolute;
+  /* height: 50px; */
+  bottom: 0px;
+  right: 0px;
+  display: flex;
+  align-items: center;
+  color: #f7f7f7;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 5px;
+  padding-top: 5px;
+}
+
+.stats-item {
+  width: 50px;
+  text-align: center;
+
+  /* justify-content: center; */
+}
+
+.stats-item.likes::before {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 32px;
+  background: center/40% url(./images/heart.svg) no-repeat;
+}
+
+.stats-item.viwes::before {
+  content: '';
+  display: block;
+
+  width: 100%;
+  height: 32px;
+  background: center/40% url(./images/eye.svg) no-repeat;
+}
+
+.stats-item.comments::before {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 32px;
+  background: center/40% url(./images/bubble.svg) no-repeat;
+}
+
+.stats-item.downloads::before {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 32px;
+
+  background: center/40% url(./images/download2.svg) no-repeat;
+}
+
+.stats-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+
+/* Lightbox */
+.lightbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity var(--animation-duration) var(--timing-function);
+}
+
+.lightbox.is-open {
+  opacity: 1;
+  pointer-events: initial;
+}
+
+.lightbox__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.lightbox__content {
+  transform: scale(0.95);
+  transition: transform var(--animation-duration) var(--timing-function);
+}
+
+.lightbox.is-open .lightbox__content {
+  transform: scale(1);
+}
+
+.lightbox__image {
+  display: block;
+  width: auto;
+  height: auto;
+  max-height: 100vh;
+  max-width: 100vw;
+}
+
+.lightbox__button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 48px;
+  height: 48px;
+  padding: 0;
+  margin: 0;
+  border: none;
+  border-radius: 50%;
+  background-color: transparent;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color var(--animation-duration) var(--timing-function);
+  outline: none;
+  background-image: url('../src/images/icon-close.svg');
+  background-position: center;
+  background-size: 60%;
+  background-repeat: no-repeat;
+}
+
+.lightbox__button:hover,
+.lightbox__button:focus {
+  background-color: rgba(0, 0, 0, 0.5);
 }
