--- a/src/templates/gallery.hbs
+++ b/src/templates/gallery.hbs
@@ -1,28 +1,31 @@
 <ul class="gallery">
-    {{#each image}}
+    {{#each renderArray}}
     <li class="gallery-card">
-        <div class="photo-card">
-            <img src="{{this.webformatURL}}" alt="" />
+        <a href="" class="gallery-link">
 
-            <div class="stats">
-                <p class="stats-item">
-                    <i class="material-icons">thumb_up</i>
-                    {{this.likes}}
-                </p>
-                <p class="stats-item">
-                    <i class="material-icons">visibility</i>
-                    {{this.views}}
-                </p>
-                <p class="stats-item">
-                    <i class="material-icons">comment</i>
-                    {{this.comments}}
-                </p>
-                <p class="stats-item">
-                    <i class="material-icons">cloud_download</i>
-                    {{this.downloads}}
-                </p>
+            <div class="photo-card">
+                <img class="gallery-img" src="{{this.previewURL}}" alt="" />
+
+                <div class="stats">
+                    <p class="stats-item likes">
+                        {{!-- <i class="material-icons">thumb_up</i> --}}
+                        {{this.likes}}
+                    </p>
+                    <p class="stats-item viwes">
+                        {{!-- <i class="material-icons">views</i> --}}
+                        {{this.views}}
+                    </p>
+                    <p class="stats-item comments">
+                        {{!-- <i class="material-icons">comment</i> --}}
+                        {{this.comments}}
+                    </p>
+                    <p class="stats-item downloads">
+                        {{!-- <i class="material-icons">cloud_download</i> --}}
+                        {{this.downloads}}
+                    </p>
+                </div>
             </div>
-        </div>
+        </a>
     </li>
     {{/each}}
 </ul>
