--- a/src/templates/gallery.hbs
+++ b/src/templates/gallery.hbs
@@ -1,5 +1,5 @@
 <ul class="gallery">
-    {{#each renderArray}}
+    {{#each data}}
     <li class="gallery-card">
         <a href="" class="gallery-link">
 
