--- a/src/styles.css
+++ b/src/styles.css
@@ -51,7 +51,7 @@ html {
   outline: none;
 }
 
-.gallery {
+.gallery-list {
   display: flex;
   flex-wrap: wrap;
   list-style: none;
@@ -70,8 +70,8 @@ html {
   margin-right: 0;
   display: block;
   height: 160px;
-  object-fit: fill;
-  }
+  object-fit: cover;
+}
 
 .gallery-img {
   width: 260px;
@@ -97,7 +97,7 @@ html {
   background-color: rgba(96, 97, 99, 80%);
 
   font-weight: 300;
-  font-size: 15px;
+  font-size: 12px;
 
   position: absolute;
   /* height: 50px; */
@@ -108,23 +108,30 @@ html {
   color: #f7f7f7;
   padding-left: 15px;
   padding-right: 15px;
-  padding-bottom: 5px;
-  padding-top: 5px;
+  padding-bottom: 3px;
+  padding-top: 3px;
 }
 
 .stats-item {
   width: 50px;
+  display: block;
   text-align: center;
 
   /* justify-content: center; */
 }
 
-.stats-item.likes::before {
+.material-icons{
+  font-size: 16px;
+  display: block;
+  margin-bottom: 3px;
+}
+
+/* .stats-item.likes::before {
   content: '';
   display: block;
   width: 100%;
-  height: 32px;
-  background: center/40% url(./images/heart.svg) no-repeat;
+  height: 20px;
+  background: center/30% url(./images/heart.svg) no-repeat;
 }
 
 .stats-item.viwes::before {
@@ -132,103 +139,60 @@ html {
   display: block;
 
   width: 100%;
-  height: 32px;
-  background: center/40% url(./images/eye.svg) no-repeat;
+  height: 20px;
+  background: center/30% url(./images/eye.svg) no-repeat;
 }
 
 .stats-item.comments::before {
   content: '';
   display: block;
   width: 100%;
-  height: 32px;
-  background: center/40% url(./images/bubble.svg) no-repeat;
+  height: 20px;
+  background: center/30% url(./images/bubble.svg) no-repeat;
 }
 
 .stats-item.downloads::before {
   content: '';
   display: block;
   width: 100%;
-  height: 32px;
+  height: 20px;
 
-  background: center/40% url(./images/download2.svg) no-repeat;
-}
+  background: center/30% url(./images/download2.svg) no-repeat;
+} */
 
 .stats-item:not(:last-child) {
   margin-right: 10px;
 }
 
 
-/* Lightbox */
-.lightbox {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity var(--animation-duration) var(--timing-function);
+.load-more{
+  width: 100%;
+  /* padding-left: auto;
+  padding-right: auto; */
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.lightbox.is-open {
-  opacity: 1;
-  pointer-events: initial;
+.load-more .button{
+  padding-left: 30px;
+  padding-right: 30px;
+  height: 30px;
+  border-radius: 30px;
+  background-color: #808080;
+  transition: background-color 400ms cubic-bezier(0.4, 0, 0.2, 1);;
 }
 
-.lightbox__overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-.lightbox__content {
-  transform: scale(0.95);
-  transition: transform var(--animation-duration) var(--timing-function);
-}
-
-.lightbox.is-open .lightbox__content {
-  transform: scale(1);
-}
-
-.lightbox__image {
-  display: block;
-  width: auto;
-  height: auto;
-  max-height: 100vh;
-  max-width: 100vw;
-}
-
-.lightbox__button {
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 48px;
-  height: 48px;
-  padding: 0;
-  margin: 0;
-  border: none;
-  border-radius: 50%;
-  background-color: transparent;
-  color: #fff;
-  cursor: pointer;
-  transition: background-color var(--animation-duration) var(--timing-function);
+.load-more .button:hover{
+  background-color: green;
   outline: none;
-  background-image: url('../src/images/icon-close.svg');
-  background-position: center;
-  background-size: 60%;
-  background-repeat: no-repeat;
 }
 
-.lightbox__button:hover,
-.lightbox__button:focus {
-  background-color: rgba(0, 0, 0, 0.5);
+
+.load-more .button:focus{
+  outline: none;
+}
+
+
+.container{
+  margin-bottom: 30px;
 }
