добавляет функционал вывода избображения в модальное окно

--- a/src/styles.css
+++ b/src/styles.css
@@ -79,6 +79,8 @@ html {
 
 .gallery-card {
   width: calc((50px * 4) + (20px * 3));
+  transition: 
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .gallery-card:not(:nth-last-child(-n + 4)) {
@@ -87,6 +89,13 @@ html {
 
 .gallery-card:not(:nth-child(4n)) {
   margin-right: 25px;
+}
+
+.gallery-card:hover{
+  cursor: pointer;
+box-shadow: 0px 0px 8px 3px rgba(130,124,124,0.75),
+ 0px 0px 8px 3px rgba(130,124,124,0.75),
+0px 0px 8px 3px rgba(130,124,124,0.75);
 }
 
 .photo-card {
