--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,8 @@ html {
 }
 
 .search-form {
+  display: flex;
+  justify-content: center;
   margin-left: auto;
   margin-right: auto;
   margin-top: 30px;
@@ -26,8 +28,6 @@ html {
 
 .search-form .input {
   display: block;
-  /* width: 100%; */
-
   height: 47px;
   padding: 0 24px;
   color: #808080;
@@ -102,31 +102,26 @@ box-shadow: 0px 0px 8px 3px rgba(130,124,124,0.75),
   position: relative;
 }
 
-.stats {
-  background-color: rgba(96, 97, 99, 80%);
-
-  font-weight: 300;
-  font-size: 12px;
-
-  position: absolute;
-  /* height: 50px; */
-  bottom: 0px;
-  right: 0px;
+.stats { 
   display: flex;
   align-items: center;
-  color: #f7f7f7;
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
   padding-left: 15px;
   padding-right: 15px;
   padding-bottom: 3px;
   padding-top: 3px;
+  color: #f7f7f7;
+  background-color: rgba(96, 97, 99, 80%);
+  font-weight: 300;
+  font-size: 12px;
 }
 
 .stats-item {
   width: 50px;
   display: block;
   text-align: center;
-
-  /* justify-content: center; */
 }
 
 .material-icons{
@@ -135,64 +130,38 @@ box-shadow: 0px 0px 8px 3px rgba(130,124,124,0.75),
   margin-bottom: 3px;
 }
 
-/* .stats-item.likes::before {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 20px;
-  background: center/30% url(./images/heart.svg) no-repeat;
-}
-
-.stats-item.viwes::before {
-  content: '';
-  display: block;
-
-  width: 100%;
-  height: 20px;
-  background: center/30% url(./images/eye.svg) no-repeat;
-}
-
-.stats-item.comments::before {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 20px;
-  background: center/30% url(./images/bubble.svg) no-repeat;
-}
-
-.stats-item.downloads::before {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 20px;
-
-  background: center/30% url(./images/download2.svg) no-repeat;
-} */
-
 .stats-item:not(:last-child) {
   margin-right: 10px;
 }
 
-
 .load-more{
+  display: flex;
+  justify-content: center;
+  opacity: 0;
   width: 100%;
-  /* padding-left: auto;
-  padding-right: auto; */
   margin-left: auto;
   margin-right: auto;
+  transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .load-more .button{
+  background-color:#f9f9f9;
+	border-radius:28px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#666666;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffff;
   padding-left: 30px;
   padding-right: 30px;
-  height: 30px;
-  border-radius: 30px;
-  background-color: #808080;
-  transition: background-color 400ms cubic-bezier(0.4, 0, 0.2, 1);;
+  height: 35px;
+  transition: background-color 400ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .load-more .button:hover{
-  background-color: green;
+
+  background-color:#e9e9e9;
   outline: none;
 }
 
