--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,10 @@ html {
   font-family: 'Quicksand', sans-serif;
 }
 
+.container {
+  margin-bottom: 30px;
+}
+
 .search-form {
   display: flex;
   justify-content: center;
@@ -35,7 +39,6 @@ html {
   border-color: #f7f7f7;
   border-style: solid;
   border-radius: 23.5px;
-
   background: #f7f7f7;
   margin-bottom: 25px;
   transition: border-color 400ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -79,8 +82,7 @@ html {
 
 .gallery-card {
   width: calc((50px * 4) + (20px * 3));
-  transition: 
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .gallery-card:not(:nth-last-child(-n + 4)) {
@@ -91,18 +93,18 @@ html {
   margin-right: 25px;
 }
 
-.gallery-card:hover{
+.gallery-card:hover {
   cursor: pointer;
-box-shadow: 0px 0px 8px 3px rgba(130,124,124,0.75),
- 0px 0px 8px 3px rgba(130,124,124,0.75),
-0px 0px 8px 3px rgba(130,124,124,0.75);
+  box-shadow: 0px 0px 8px 3px rgba(130, 124, 124, 0.75),
+    0px 0px 8px 3px rgba(130, 124, 124, 0.75),
+    0px 0px 8px 3px rgba(130, 124, 124, 0.75);
 }
 
 .photo-card {
   position: relative;
 }
 
-.stats { 
+.stats {
   display: flex;
   align-items: center;
   position: absolute;
@@ -124,7 +126,7 @@ box-shadow: 0px 0px 8px 3px rgba(130,124,124,0.75),
   text-align: center;
 }
 
-.material-icons{
+.material-icons {
   font-size: 16px;
   display: block;
   margin-bottom: 3px;
@@ -134,43 +136,37 @@ box-shadow: 0px 0px 8px 3px rgba(130,124,124,0.75),
   margin-right: 10px;
 }
 
-.load-more{
+.load-more {
   display: flex;
   justify-content: center;
   opacity: 0;
+  visibility: hidden;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
   transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.load-more .button{
-  background-color:#f9f9f9;
-	border-radius:28px;
-	border:1px solid #dcdcdc;
-	display:inline-block;
-	cursor:pointer;
-	color:#666666;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #ffffff;
+.load-more .button {
+  background-color: #f9f9f9;
+  border-radius: 28px;
+  border: 1px solid #dcdcdc;
+  display: inline-block;
+  cursor: pointer;
+  color: #666666;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #ffffff;
   padding-left: 30px;
   padding-right: 30px;
   height: 35px;
   transition: background-color 400ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.load-more .button:hover{
-
-  background-color:#e9e9e9;
+.load-more .button:hover {
+  background-color: #e9e9e9;
   outline: none;
 }
 
-
-.load-more .button:focus{
+.load-more .button:focus {
   outline: none;
-}
-
-
-.container{
-  margin-bottom: 30px;
 }
